--- a/src/index.css
+++ b/src/index.css
@@ -100,6 +100,10 @@ code {
   border-radius: 10px;
 }
 
+.imagenR{
+  height: 460px;
+}
+
 /* ------------------------- NavBar -------------------------------------- */
 
 
